--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="green line" id="begovaya-primorskaya"></div>
     <div class="green line diagonal-todown" id="primorskaya-spawn"></div>
     <div class="green line vertical" id="spawn-rybackoe"></div>
+    <div class="green line vertical" id="rybackoe-lake_village"></div>
     
     <div class="blue line diagonal-todown" id="technolozhka-dark_village"></div>
     
@@ -23,6 +24,7 @@
     <div class="green circle" id="primorskaya"></div>
     <div class="green circle" id="skelet_xp"></div>
     <div class="green circle" id="rybackoe"></div>
+    <div class="green circle" id="lake_village"></div>
 
     <div class="circle" id="spawn"></div>
     <div class="transfer circle top_red bottom_green" id="spawn_center"></div>
@@ -43,6 +45,7 @@
     <p id="dark_village_text">Тёмная деревня</p>
     <p id="skelet_xp_text">Скелетная качалка</p>
     <p id="rybackoe_text">Рыбацкое</p>
+    <p id="lake_village_text">Озёрная деревня</p>
 
     <h1>Карта метро копача</h1>
 
